# techbible-hack

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
backend/: agent.py  arbitrage.py  main.py  mcp_client.py  models.py  pyproject.toml  scraper.py
next-app/: next.config.ts  package-lock.json  package.json
next-app/app/: globals.css  layout.tsx  page.tsx
next-app/app/components/: AgentLog.tsx  BuyAlert.tsx  CountryCard.tsx  DecisionCard.tsx  Header.tsx  Skeleton.tsx  UrlInput.tsx  WatchToggle.tsx  WishlistPanel.tsx
